--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "spin-360",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "360 degree detailed image presentation plugin",
-  "main": "scripts/spin360.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
